sandbox/output
StringCalculatorTest.java:10: error: cannot find symbol
        int actual = StringCalculator.add(numbers);
                                     ^
  symbol:   method add(String)
  location: class StringCalculator
1 error
